Avoids video size jumping during page loading. For https://www.pivotaltracker.com/story/show/15933211

--- a/media/css/mirosubs-widget.css
+++ b/media/css/mirosubs-widget.css
@@ -1002,6 +1002,12 @@ margin-right: 20px !important;
    margin-bottom: 30px !important;
 }
 
+.mirosubs-widget span.mirosubs-videoplayer {
+   width: 480px;
+   height: 360px;
+   background-color: black;
+}
+
 span.mirosubs-videoplayer {
    display: block !important;
 }
